// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date unit options for ThisNextLast component useFiscalLastUnits matches expected values 1`] = `
Array [
  Object {
    "label": "second",
    "singular": "second",
    "unit": "second",
    "value": "second",
  },
  Object {
    "label": "minute",
    "singular": "minute",
    "unit": "minute",
    "value": "minute",
  },
  Object {
    "label": "hour",
    "singular": "hour",
    "unit": "hour",
    "value": "hour",
  },
  Object {
    "label": "day",
    "singular": "day",
    "unit": "day",
    "value": "day",
  },
  Object {
    "label": "week",
    "singular": "week",
    "unit": "week",
    "value": "week",
  },
  Object {
    "label": "month",
    "singular": "month",
    "unit": "month",
    "value": "month",
  },
  Object {
    "label": "quarter",
    "singular": "quarter",
    "unit": "quarter",
    "value": "quarter",
  },
  Object {
    "label": "year",
    "singular": "year",
    "unit": "year",
    "value": "year",
  },
  Object {
    "label": "fiscal quarter",
    "singular": "fiscal quarter",
    "unit": "fiscal quarter",
    "value": "fiscal quarter",
  },
  Object {
    "label": "fiscal year",
    "singular": "fiscal year",
    "unit": "fiscal year",
    "value": "fiscal year",
  },
]
`;

exports[`date unit options for ThisNextLast component useFiscalThisNextUnits matches expected values 1`] = `
Array [
  Object {
    "label": "day",
    "singular": "day",
    "unit": "day",
    "value": "day",
  },
  Object {
    "label": "week",
    "singular": "week",
    "unit": "week",
    "value": "week",
  },
  Object {
    "label": "month",
    "singular": "month",
    "unit": "month",
    "value": "month",
  },
  Object {
    "label": "quarter",
    "singular": "quarter",
    "unit": "quarter",
    "value": "quarter",
  },
  Object {
    "label": "year",
    "singular": "year",
    "unit": "year",
    "value": "year",
  },
  Object {
    "label": "fiscal quarter",
    "singular": "fiscal quarter",
    "unit": "fiscal quarter",
    "value": "fiscal quarter",
  },
  Object {
    "label": "fiscal year",
    "singular": "fiscal year",
    "unit": "fiscal year",
    "value": "fiscal year",
  },
]
`;

exports[`date unit options for ThisNextLast component useLastUnits matches expected values 1`] = `
Array [
  Object {
    "label": "second",
    "singular": "second",
    "unit": "second",
    "value": "second",
  },
  Object {
    "label": "minute",
    "singular": "minute",
    "unit": "minute",
    "value": "minute",
  },
  Object {
    "label": "hour",
    "singular": "hour",
    "unit": "hour",
    "value": "hour",
  },
  Object {
    "label": "day",
    "singular": "day",
    "unit": "day",
    "value": "day",
  },
  Object {
    "label": "week",
    "singular": "week",
    "unit": "week",
    "value": "week",
  },
  Object {
    "label": "month",
    "singular": "month",
    "unit": "month",
    "value": "month",
  },
  Object {
    "label": "quarter",
    "singular": "quarter",
    "unit": "quarter",
    "value": "quarter",
  },
  Object {
    "label": "year",
    "singular": "year",
    "unit": "year",
    "value": "year",
  },
]
`;

exports[`date unit options for ThisNextLast component useThisNextUnits matches expected values 1`] = `
Array [
  Object {
    "label": "day",
    "singular": "day",
    "unit": "day",
    "value": "day",
  },
  Object {
    "label": "week",
    "singular": "week",
    "unit": "week",
    "value": "week",
  },
  Object {
    "label": "month",
    "singular": "month",
    "unit": "month",
    "value": "month",
  },
  Object {
    "label": "quarter",
    "singular": "quarter",
    "unit": "quarter",
    "value": "quarter",
  },
  Object {
    "label": "year",
    "singular": "year",
    "unit": "year",
    "value": "year",
  },
]
`;
